# squirrel_robotino

./: .gitignore  .robotino-api2.install.sh  .rosinstall  .travis.install.sh  .travis.rosinstall  .travis.sh  .travis.yml  README.md
action_msgs_manipulation/: CMakeLists.txt  package.xml
action_msgs_manipulation/action/: inspect.action  pickUp.action  push.action  putDown.action
common/: CMakeLists.txt  package.xml
planning_knowledge_msgs/: CMakeLists.txt  package.xml
planning_knowledge_msgs/srv/: PointCloudService.srv
robotino_bringup/: CMakeLists.txt  env-rasp.sh  env.sh  package.xml
robotino_bringup/config/: arm_controller.yaml  arm_controller_pos.yaml  config.rviz  hand_config_param.yaml  logitech.launch  logitech.yaml  pan_tilt.yaml  rotatory_controller.yaml  tilt.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
robotino_bringup/launch/: arduino.launch  arm.launch  asus_frames.launch  cmd_rotatory_locker.launch  dynamixel_controller_manager.launch  kclhand.launch  kclhand_launch.launch  kclhand_launch_js.launch  kclhand_launch_new.launch  kclhand_tuw-robotino2.launch  kclhand_uibk-robotino2.launch  origin_odom.launch  robot.launch  robotino.launch  robotino1.xml  rviz.launch  sensing.launch  start_pan_tilt_controller.launch  start_tilt_controller.launch  twist_mux.launch
robotino_bringup/src/: cmd_rotatory_startup_locker.py  dynamixel_joint_state_publisher.py  pan_tilt_publisher.py  tilt_state_publisher.py
robotino_bringup/urdf/: robotino1.urdf.xacro
robotino_bringup_sim/: CMakeLists.txt  README.md  package.xml
robotino_bringup_sim/launch/: robot.launch  robotino_sim.launch  robotino_sim.launch~
robotino_bringup_sim/scripts/: odomp_frame.py  remove_object.py  spawn_object.py
robotino_calibration/: CMakeLists.txt  package.xml  readme.md
robotino_calibration/cfg/: CheckerboardLocalisation.cfg
robotino_controller_configuration_gazebo/: CMakeLists.txt  package.xml
robotino_controller_configuration_gazebo/config/: base_controller.yaml  joint_controller.yaml
robotino_controller_configuration_gazebo/controller/: arm_controller.yaml  arm_jointstates.yaml  base_controller.yaml  base_controller_8dof.yaml  hand_controller.yaml  joint_controller.yaml  pan_tilt_controller.yaml  rotatory_controller.yaml  shell_controller.yaml  tilt_controller.yaml
robotino_controller_configuration_gazebo/launch/: arm_base_controller.launch  arm_controller.launch  base_controller.launch  default_controllers_robotino.launch  hand_controller.launch  joint_state_controller.launch  kinect_controller.launch  pan_tilt_controller.launch  rotatory_controller.launch  shell_controller.launch  tilt_controller.launch
robotino_controller_configuration_gazebo/src/: ArmController.cpp  BaseCmdPub.cpp  OdometryController.cpp  RobotinoController.cpp  RobotinoControllerNode.cpp  door_controller.py  hand_controller.py
robotino_description/: CMakeLists.txt  package.xml
robotino_description/launch/: kinect_static_transform.launch
robotino_description/meshes/: case.stl  coupler.stl  pan_tilt.stl  pan_tilt_tuw.stl  wrist.stl
robotino_description/urdf/: angle_bracket.urdf.xacro  arm.urdf.xacro  base_case.urdf.xacro  camera.urdf.xacro  gazebo.urdf.xacro  hokuyo.urdf.xacro  kinect.urdf.xacro  pan_tilt_axis.urdf.xacro  pan_tilt_tuw_axis.urdf.xacro  properties.urdf.xacro  robotino.urdf  robotino.urdf.xacro  robotino_body.urdf.xacro  robotino_body.xacro  robotino_hardware.xacro  robotino_simple_body.urdf.xacro  rotatory.urdf.xacro  soft_hand.urdf.xacro  soft_hand_simple.urdf.xacro  tilt_axis.urdf.xacro  wristSensors.urdf.xacro
robotino_gazebo_worlds/: CMakeLists.txt  package.xml
robotino_gazebo_worlds/launch/: calibration-room.launch  empty.launch  ipa-apartment.launch  simple-room.launch  simple_room.launch  upload_object_locations.launch
robotino_gazebo_worlds/objects/: chair.urdf  kitchen.urdf  kitchen.urdf.xacro  orange_cylinder.urdf  simple_blue_box.urdf  simple_red_box.urdf  white_ball.urdf
robotino_gazebo_worlds/urdf/: materials.urdf.xacro
robotino_gazebo_worlds/worlds/: calibration_room_checkerboard.world  calibration_room_empty.world  calibration_room_pitag.world  empty.world
robotino_hardware_test/: CMakeLists.txt  README.md  package.xml  setup.py
robotino_hardware_test/launch/: harwdare_test.launch
robotino_hardware_test/scripts/: hardware_test.py
robotino_hardware_test/srv/: TestTrigger.srv
robotino_safety/: CMakeLists.txt  package.xml
robotino_safety/launch/: robotino_safety_node.launch
robotino_safety/src/: RobotinoSafety.cpp
robotino_teleop/: CMakeLists.txt  package.xml
robotino_teleop/launch/: keyboard_teleop.launch
squirrel_common/: CMakeLists.txt  package.xml
squirrel_localizer_msgs/: CMakeLists.txt  package.xml
squirrel_localizer_msgs/msg/: RefScan.msg
squirrel_manipulation_msgs/: CMakeLists.txt  package.xml
squirrel_manipulation_msgs/action/: BlindGrasp.action  Drop.action  Inspect.action  Lean.action  pickUp.action
squirrel_mhand_msgs/: CMakeLists.txt  package.xml
squirrel_mhand_msgs/action/: SetJointTarget.action  TrackNewSetpoints.action
squirrel_mhand_msgs/msg/: Joint.msg
squirrel_object_perception_msgs/: CMakeLists.txt  package.xml
squirrel_object_perception_msgs/action/: Look.action  LookForObjects.action
squirrel_object_perception_msgs/msg/: BBox.msg  Classification.msg  Saliency.msg
squirrel_object_perception_msgs/srv/: Classify.srv  GetSaliency3DSymmetry.srv  GetSaliencyColor.srv  GetSaliencyHeight.srv  GetSaliencyItti.srv  GetSaliencyLocation.srv  GetSaliencySurfaceOrientation.srv  GetSaliencySymmetry.srv  ObjectRecognizer.srv  Recognize.srv  Segment.srv  SegmentOnce.srv  SegmentVisualizationInit.srv  SegmentVisualizationOnce.srv  SegmentsToObjects.srv  SetSaliency.srv  StartObjectTracking.srv  StopObjectTracking.srv  classify.srv  get_saliency.srv  segment.srv  segment_init.srv  (+1 more)
squirrel_person_tracker_msgs/: CMakeLists.txt  package.xml
squirrel_planning_dispatch_msgs/: CMakeLists.txt  package.xml
squirrel_planning_knowledge_msgs/: CMakeLists.txt  package.xml
squirrel_robotino/: CMakeLists.txt  package.xml
(+214 files in other folders)
