<?xml version="1.0"?>
<package>
  <name>action_msgs_manipulation</name>
  <version>0.0.0</version>
  <description>The action_msgs_manipulation package</description>
  <maintainer email="simon.hangl@uibk.ac.at">michael</maintainer>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
</package>
