<?xml version="1.0"?>
<package>
  <name>common</name>
  <version>0.0.1</version>
  <description>The planning_knowledge_msgs package for the ROSPlan framework.</description>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>squirrel_planning_dispatch_msgs</run_depend>
  <run_depend>squirrel_planning_knowledge_msgs</run_depend>

  <export>
	<metapackage/>
  </export>
</package>
