<package>
  <name>common</name>
  <version>0.0.1</version>
  <description>Definitions for mesages, services and actions. Startup packages for the robots</description>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robotino_bringup</run_depend>
  <run_depend>robotino_description</run_depend>
  <run_depend>robotino_driver</run_depend>
  <run_depend>robotino_msgs</run_depend>
  
  <run_depend>squirrel_manipulation_msgs</run_depend>
  <run_depend>squirrel_mhand_msgs</run_depend>
  <run_depend>squirrel_object_perception_msgs</run_depend>
  <run_depend>squirrel_planning_dispatch_msgs</run_depend>
  <run_depend>squirrel_planning_knowledge_msgs</run_depend>
  

  <export>
	<metapackage/>
  </export>
</package>
