<?xml version="1.0"?>
<package>
  <name>planning_knowledge_msgs</name>
  <version>0.0.0</version>
  <description>The planning_knowledge_msgs package</description>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/planning_dispatch_msgs</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dignostic_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dignostic_msgs</run_depend>

  <export></export>
</package>
