<?xml version="1.0"?>
<package format="2">
	<name>robotino_calibration</name>
	<version>0.0.0</version>
	<description>The robotino_calibration package</description>

	<license>LGPL</license>
	<!-- <url type="website">http://wiki.ros.org/robotino_calibration</url> -->

	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>libopencv-dev</depend>
	<depend>cmake_modules</depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>libpcl-all-dev</depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
	</export>
</package>