<package>
  <name>robotino_controller_configuration_gazebo</name>
  <version>0.0.0</version>
  <description>This packages provides the controller configuration for simulating robotino in the gazebo simulator.</description>
  
  <license>BSD</license>

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>ros_controllers</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>velocity_controllers</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>robotino_bringup</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>boost</build_depend>

  <run_depend>roslaunch</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robotino_bringup</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>boost</run_depend>

  <export>

  </export>
</package>
