<?xml version="1.0"?>
<package>
  <name>robotino_safety</name>
  <version>0.0.0</version>
  <description>The robotino_safety package</description>

  <author email="indorewala@servicerobotics.eu">Indore Wala</author>
  <maintainer email="boniardi@cs.uni-freiburg.de">Federico Boniardi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_geometry</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>laser_geometry</run_depend>

  <export>
  </export>
</package>
