<?xml version="1.0"?>
<package>
    <name>squirrel_localizer_msgs</name>
    
    <version>1.11.6</version>
    
    <description>
      Contains the definition of the action related to the localization node
    </description>
    
    <author>Federico Boniardi</author>
    <author>Joerg Roewenkaemper</author>

    <maintainer email="boniardi@cs.uni-freiburg.de">Federico Boniardi</maintainer>
    
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_runtime</run_depend>

</package>

