<?xml version="1.0"?>
<package>
  <name>squirrel_planning_knowledge_msgs</name>
  <version>0.0.1</version>
  <description>Knowledge messages for adding and updating the model in the SQUIRREL knowledge base.</description>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <license>BSD</license>
  <url type="website">http://www.squirrel-project.eu</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export></export>
</package>
