<?xml version="1.0"?>
<package>
  <name>squirrel_robotino</name>
  <version>0.0.0</version>
  <description>This repository holds packages for hardware launch files and configuration, as well as the simulation model for starting up the basic layer for operating Robotino</description>

  <license>BSD</license>

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</author>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robotino_bringup</run_depend>
  <run_depend>robotino_bringup_sim</run_depend>
  <run_depend>robotino_controller_configuration_gazebo</run_depend>
  <run_depend>robotino_description</run_depend>
  <run_depend>robotino_driver</run_depend>
  <run_depend>robotino_gazebo_worlds</run_depend>
  <run_depend>robotino_msgs</run_depend>
  <run_depend>robotino_teleop</run_depend>

  <export>
	<metapackage/>
  </export>
</package>
